# docs/swaggo/swagger.yaml
@@ -2,43 +2,77 @@ basePath: /
 definitions:
   github_com_Web-Engineering-XDU_Project-Backend_app_models.AgentDetail:
     properties:
-      allowInput:
+      allow_input:
         type: boolean
-      allowOutput:
+      allow_output:
         type: boolean
-      createAt:
+      create_at:
         type: string
       description:
         type: string
       enable:
         type: boolean
-      eventForever:
+      event_forever:
         type: boolean
-      eventMaxAge:
+      event_max_age:
         $ref: '#/definitions/time.Duration'
       id:
         type: integer
       name:
         type: string
-      propJsonStr:
+      prop_json_str:
         type: string
       type_id:
         type: integer
-      typeName:
+      type_name:
         type: string
+    type: object
+  swaggo.DeleteAgentResponse:
+    properties:
+      code:
+        type: integer
+      msg:
+        type: string
+    type: object
+  swaggo.GetAgentListResponse:
+    properties:
+      code:
+        type: integer
+      msg:
+        type: string
+      result:
+        $ref: '#/definitions/swaggo.GetAgentListResponseResult'
+    type: object
+  swaggo.GetAgentListResponseResult:
+    properties:
+      content:
+        items:
+          $ref: '#/definitions/github_com_Web-Engineering-XDU_Project-Backend_app_models.AgentDetail'
+        type: array
+      count:
+        type: integer
+    type: object
+  swaggo.NewAgentResponse:
+    properties:
+      code:
+        type: integer
+      msg:
+        type: string
+      result:
+        $ref: '#/definitions/swaggo.NewAgentResponseResult'
+    type: object
+  swaggo.NewAgentResponseResult:
+    properties:
+      id:
+        type: integer
     type: object
   time.Duration:
     enum:
-    - -9223372036854775808
-    - 9223372036854775807
     - 1
     - 1000
     - 1000000
     - 1000000000
     - 60000000000
-    - 3600000000000
-    - -9223372036854775808
-    - 9223372036854775807
     - 1
     - 1000
     - 1000000
@@ -47,16 +81,11 @@ definitions:
     - 3600000000000
     type: integer
     x-enum-varnames:
-    - minDuration
-    - maxDuration
     - Nanosecond
     - Microsecond
     - Millisecond
     - Second
     - Minute
-    - Hour
-    - minDuration
-    - maxDuration
     - Nanosecond
     - Microsecond
     - Millisecond
@@ -81,6 +110,26 @@ info:
   version: "1.0"
 paths:
   /agent:
+    delete:
+      consumes:
+      - application/json
+      description: delete agents
+      parameters:
+      - description: agent id
+        in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/swaggo.DeleteAgentResponse'
+      summary: Delete agents
+      tags:
+      - agents
     get:
       consumes:
       - application/json
@@ -106,10 +155,58 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/github_com_Web-Engineering-XDU_Project-Backend_app_models.AgentDetail'
-            type: array
+            $ref: '#/definitions/swaggo.GetAgentListResponse'
       summary: List agents
+      tags:
+      - agents
+    put:
+      consumes:
+      - application/json
+      description: new agents
+      parameters:
+      - description: enable the agent
+        in: formData
+        name: enable
+        required: true
+        type: boolean
+      - description: agent type id
+        in: formData
+        name: type_id
+        required: true
+        type: integer
+      - description: name of the agent
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: description
+        in: formData
+        name: description
+        required: true
+        type: string
+      - description: whether keep the event forever
+        in: formData
+        name: event_forever
+        required: true
+        type: boolean
+      - description: event max age in timestamp
+        in: formData
+        name: event_max_age
+        required: true
+        type: integer
+      - description: props used by specific agent type in json
+        in: formData
+        name: prop_json_str
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/swaggo.NewAgentResponse'
+      summary: New agents
       tags:
       - agents
 securityDefinitions:
